ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: coolsewingstuff.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adi-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: adi-backend
                port:
                  number: 3001
